--- a/src/ui/Camera.scss
+++ b/src/ui/Camera.scss
@@ -3,4 +3,34 @@ div.parent{
     width: 100%;
     height: 100%;
 }
+span.buttonContainer{
+    position: relative;
+    cursor: pointer;
+    top: -42px;
+    float: left;
+}
+span.switch-button{
+    position: relative;
+    cursor: pointer;
+    top: -42px;
+    float: right;
+}
+span.picture-class{
+    position: relative;
+    cursor: pointer;
+    top: -42px;
+    float: left;
+}
+span.buttonContainer2{
+    position: relative;
+    cursor: pointer;
+    top: -42px;
+    float: right;
+}
 
+span.Spacing{
+    padding: 10px;
+}
+span.glyphicon{
+    font-size: 2.2em;
+}
