--- a/src/ui/Camera.scss
+++ b/src/ui/Camera.scss
@@ -3,12 +3,7 @@ div.parent{
     width: 100%;
     height: 100%;
 }
-span.buttonContainer{
-    position: relative;
-    cursor: pointer;
-    top: -42px;
-    float: left;
-}
+
 span.switch-button{
     position: relative;
     cursor: pointer;
@@ -16,6 +11,12 @@ span.switch-button{
     float: right;
 }
 span.picture-class{
+    position: relative;
+    cursor: pointer;
+    top: -42px;
+    float: left;
+}
+span.picture-class1{
     position: relative;
     cursor: pointer;
     top: -42px;
