--- a/src/ui/Camera.scss
+++ b/src/ui/Camera.scss
@@ -1,20 +1,20 @@
-div.parent{
+.widget-camera-parent{
     position: relative;
     width: 100%;
     height: 100%;
 }
 
 span.switch-button{
-    position: relative;
     cursor: pointer;
-    top: -42px;
     float: right;
+    top: -42px;
+    position: relative;
 }
 span.picture-class{
-    position: relative;
     cursor: pointer;
-    top: -42px;
     float: left;
+    top: -42px;
+    position: relative;
 }
 span.picture-class1{
     position: relative;
@@ -22,11 +22,8 @@ span.picture-class1{
     top: -42px;
     float: left;
 }
-span.buttonContainer2{
-    position: relative;
-    cursor: pointer;
-    top: -42px;
-    float: right;
+div.buttoncontainer{
+    margin-left: 160px;
 }
 
 span.Spacing{
